--- a/src/app/pages/patients/wigs/wigs.component.html
+++ b/src/app/pages/patients/wigs/wigs.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <mat-card>
       <tr>
         Waiting List
@@ -14,15 +14,7 @@
           <td>{{ Contact.nic }}</td>
         </tr>
         <tr>
-          <td>Name</td>
-          <td>{{ Contact.name }}</td>
-        </tr>
-        <tr>
-          <td>Phone</td>
-          <td>{{ Contact.contactNumber }}</td>
-        </tr>
-        <tr>
-          <td>Deliver</td>
+          <td>Deliver Date</td>
           <td>2013/05/16</td>
         </tr>
       </table>
@@ -30,7 +22,7 @@
     </mat-card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-6">
       <mat-card>
         <tr>
           Ready List
@@ -45,51 +37,12 @@
             <td>{{ Contact.nic }}</td>
           </tr>
           <tr>
-            <td>Name</td>
-            <td>{{ Contact.name }}</td>
-          </tr>
-          <tr>
-            <td>Phone</td>
-            <td>{{ Contact.contactNumber }}</td>
-          </tr>
-          <tr>
-            <td>Deliver</td>
+            <td>Deliver Date</td>
             <td>2013/05/16</td>
           </tr>
         </table>
   
       </mat-card>
-  </div>
-
-  <div class="col-md-4">
-        <mat-card>
-          <tr>
-            Delivered List
-          </tr>
-        </mat-card>
-    
-        <mat-card *ngFor="let Contact of delivered_list">
-          <table class="table">
-            
-            <tr>
-              <td>Nic</td>
-              <td>{{ Contact.nic }}</td>
-            </tr>
-            <tr>
-              <td>Name</td>
-              <td>{{ Contact.name }}</td>
-            </tr>
-            <tr>
-              <td>Phone</td>
-              <td>{{ Contact.contactNumber }}</td>
-            </tr>
-            <tr>
-              <td>Deliver</td>
-              <td>2013/05/16</td>
-            </tr>
-          </table>
-    
-        </mat-card>
   </div>
 
 </div>
