add content for the design.html

--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,3 +1,14 @@
-<p>
-  design works!
-</p>
+
+<header>
+  <img src="../assets/2147.svg" />
+  <div>
+      <h1>Angular Firestore Uploads</h1>
+      <p>Powered by Angular 7 & Firestore</p>
+      <a routerLink="/addpost">New Post</a>
+  </div>
+  
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
