make some changes

--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,6 +1,6 @@
 
 <header>
-  <img src="../assets/2147.svg" />
+  <!-- <img src="../assets/2147.svg" /> -->
   <div>
       <h1>Angular Firestore Uploads</h1>
       <p>Powered by Angular 7 & Firestore</p>
