--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,14 +1,18 @@
-
 <header>
-  <!-- <img src="../assets/2147.svg" /> -->
   <div>
-      <h1>Angular Firestore Uploads</h1>
-      <p>Powered by Angular 7 & Firestore</p>
-      <a routerLink="/addpost">New Post</a>
+    <h1>Angular Firestore Uploads</h1>
+    <p>Powered by Angular 7 & Firestore</p>
+    <a routerLink="/addpost">New Post</a>
+    <button (click)="button()">New One</button>
   </div>
-  
 </header>
-<main>
-  <router-outlet></router-outlet>
-</main>
 
+<div>
+  <app-addposts></app-addposts>
+</div>
+
+<div>
+  <app-main></app-main>
+</div>
+
+<router-outlet></router-outlet>
