make few changes

--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,14 +1,22 @@
-<header>
-  <div>
-    <h1>Angular Firestore Uploads</h1>
-    <p>Powered by Angular 7 & Firestore</p>
-    <a routerLink="/addpost">New Post</a>
-    <button (click)="button()">New One</button>
-  </div>
-</header>
+<!-- <header>
+    <div>
+      <a routerLink="/addpost">New Post</a>
+      <button (click)="button()">New One</button>
+    </div>
+  </header> -->
 
-<div>
-  <app-addposts></app-addposts>
+<div class="row showcase">
+  <div class="col-md-8">
+    <mat-card>
+      <h2 align="center">Wig Showcase</h2>
+    </mat-card>
+  </div>
+
+  <div class="col-md-8">
+    <mat-card>
+      <app-addposts></app-addposts>
+    </mat-card>
+  </div>
 </div>
 
 <div>
