make a changes in wigs showroom

--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -17,6 +17,12 @@
       <app-addposts></app-addposts>
     </mat-card>
   </div>
+
+  <div class="col-md-8">
+    <mat-card>
+      <h2 align="center">Available Wigs</h2>
+    </mat-card>
+  </div>
 </div>
 
 <div>
