make changes in showroom

--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -17,7 +17,9 @@
       <app-addposts></app-addposts>
     </mat-card>
   </div>
+</div>
 
+<div class="row showcase2">
   <div class="col-md-8">
     <mat-card>
       <h2 align="center">Available Wigs</h2>
