--- a/src/app/pages/design/main/main.component.css
+++ b/src/app/pages/design/main/main.component.css
@@ -77,17 +77,18 @@ header img {
 
 .post {
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   margin: 10px;
-  background: rgb(235, 233, 233);
-  text-indent: 20px;
+  background: rgb(246, 246, 248);
+  color: #fff;
+  /* text-indent: 20px; */
 }
 
 .cover {
-  width: 100%;
-  height: 230px;
+  width: 200px;
+  height: 200px;
   background-size: 140% !important;
-  transition: background-size 0.4s ease-in-out;
+  /* transition: background-size 0.4s ease-in-out; */
 }
 .cover:hover {
   background-size: 150% !important;
@@ -162,4 +163,8 @@ label.cover i {
 form a {
   color: #fff;
   text-decoration: none;
+}
+
+.text {
+  color: rgb(83, 3, 212);
 }
