--- a/src/app/pages/design/main/main.component.css
+++ b/src/app/pages/design/main/main.component.css
@@ -1,3 +1,6 @@
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
+@import '../../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+
 body {
   margin: 0;
   padding: 0px;
@@ -167,4 +170,12 @@ form a {
 
 .text {
   color: rgb(83, 3, 212);
+}
+
+.delete {
+  margin-left: 50px;
+}
+
+.vilibility {
+  margin-left: -125px;
 }
