--- a/src/app/pages/design/main/main.component.html
+++ b/src/app/pages/design/main/main.component.html
@@ -34,10 +34,22 @@
             <td>
               <div class="vilibility">
                 <div *ngIf="itVisble()">
-                  <button mat-button color="accent">Invisible</button>
+                  <button
+                    mat-button
+                    color="accent"
+                    (click)="editToInVisible(post.id, post.data.fileref)"
+                  >
+                    Invisible
+                  </button>
                 </div>
                 <div *ngIf="itInVisble()">
-                  <button mat-button color="accent">VIsible</button>
+                  <button
+                    mat-button
+                    color="accent"
+                    (click)="editToVisible(post.id, post.data.fileref)"
+                  >
+                    VIsible
+                  </button>
                 </div>
               </div>
             </td>
