add option for see the visible status

--- a/src/app/pages/design/main/main.component.html
+++ b/src/app/pages/design/main/main.component.html
@@ -8,11 +8,18 @@
       <table>
         <td>
           <tr>
-            <h3>
-              <b>
-                {{ post.data.title }}
-              </b>
-            </h3>
+            <td>
+              <h3>
+                <b>
+                  {{ post.data.title }}
+                </b>
+              </h3>
+            </td>
+            <td>
+              <h6>
+                <b> VISIBILITY:{{ post.data.status }} </b>
+              </h6>
+            </td>
           </tr>
           <tr>
             <h6>
