--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -1,9 +1,35 @@
 <mat-card>
-  <h3>Measurements</h3>
+  <div class="cover">
+    <h3>Measurements</h3>
 
-  <img
-    src="../../../assets/images/measurements.jpg"
-    alt="Girl in a jacket"
-    style="width:200px;height:300px;"
-  />
+    <img
+      src="../../../assets/images/measurements.jpg"
+      alt="Girl in a jacket"
+      style="width:500px;height:400px;"
+    />
+  </div>
+
+  <div class="topics">
+    <ol>
+      <li><b>Circumference</b></li>
+      <li><b>Front fo nape</b></li>
+      <li><b>Ear to ear across forehead</b></li>
+      <li><b>Ear to ear over top</b></li>
+      <li><b>Temple to templr round back</b></li>
+      <li><b>nape to neck</b></li>
+    </ol>
+  </div>
 </mat-card>
+
+<style>
+  .cover {
+    margin-left: 100px;
+    width: 500px;
+  }
+
+  .topics {
+    width: 300;
+    margin-left: 700px;
+    margin-top: -100px;
+  }
+</style>
