--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -14,9 +14,32 @@
           <td>Hair Color:</td>
           <td>:{{ patients_for_dialog.haircolor }}</td>
         </tr>
+
         <tr>
-          <td>Measurement:</td>
-          <td>:{{ patients_for_dialog.measurements }}</td>
+          <td>M1:</td>
+          <td>:{{ patients_for_dialog.M1 }}</td>
+        </tr>
+
+        <tr>
+          <td>M2:</td>
+          <td>:{{ patients_for_dialog.M2 }}</td>
+        </tr>
+
+        <tr>
+          <td>M3:</td>
+          <td>:{{ patients_for_dialog.M3 }}</td>
+        </tr>
+        <tr>
+          <td>M4:</td>
+          <td>:{{ patients_for_dialog.M4 }}</td>
+        </tr>
+        <tr>
+          <td>M5:</td>
+          <td>:{{ patients_for_dialog.M5 }}</td>
+        </tr>
+        <tr>
+          <td>M6:</td>
+          <td>:{{ patients_for_dialog.M6 }}</td>
         </tr>
         <tr>
           <td>Hair Style:</td>
