--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -18,16 +18,18 @@
     [class.left]="position === 'inverse'"
   >
     <nb-action *nbIsGranted="['view', 'user']">
-      <!-- <nb-user [nbContextMenu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user> -->
+      <nb-user
+        (click)="startSearch()"
+        [nbContextMenu]="userMenu"
+        [name]="user?.name"
+        [picture]="user?.picture"
+      ></nb-user>
     </nb-action>
-    <nb-action
-      class="control-item"
-      disabled
-      icon="nb-notifications"
-    ></nb-action>
-    <nb-action class="control-item" icon="nb-email"></nb-action>
+
+    <!-- <nb-action class="control-item" disabled icon="nb-notifications"></nb-action> -->
+    <!-- <nb-action class="control-item" icon="nb-email"></nb-action>
     <nb-action class="control-item">
       <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
-    </nb-action>
+    </nb-action> -->
   </nb-actions>
 </div>
