--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -68,6 +68,15 @@
       >
         waiting
       </button>
+
+      <button
+      type="button"
+      class="btn btn-primary btn-rounded"
+      (click)="btnClick(patients_for_dialog)"
+    >
+      <!-- <i class="fa fa-plus"></i> Email -->
+      Email
+    </button>
     </div>
   </mat-card-content>
 </mat-card>
